# orca_workflow_manager

./: pyproject.toml
example/: calculate.py  generate_test_dataset.py
orca_workflow_manager/: __init__.py  db.py  orca_utils.py  template.py  workflow.py
orca_workflow_manager/templates/: orca_b3lyp_def2-QZVPPD_opt.inp  orca_b3lyp_def2-SVPD_engrad copy.inp  orca_b3lyp_def2-SVPD_freq.inp  orca_b3lyp_def2-SVPD_opt.inp  orca_b3lyp_def2-SVP_engrad.inp  orca_b3lyp_def2-SVP_freq.inp  orca_b3lyp_def2-SVP_opt.inp  orca_b3lyp_def2-TZVPD_freq.inp  orca_b3lyp_def2-TZVPD_opt.inp  orca_m062x_def2-SVPD_engrad.inp  orca_m062x_def2-SVPD_freq.inp  orca_m062x_def2-SVPD_opt.inp  orca_pbe_def2-SVP_engrad.inp  slurm_orca.sh
